# ChangeLog for app-admin/eselect-ruby
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-ruby/ChangeLog,v 1.18 2009/10/12 23:09:22 jer Exp $

*eselect-ruby-20100308

  08 Mar 2010; Daniel Robbins <drobbins@funtoo.org>
  +eselect-ruby-20100308.ebuild: Newer upstream version with Funtoo tweaks for
  "ruby1.9"+ - this is the 20091225 version from Gentoo.

  12 Oct 2009; Jeroen Roovers <jer@gentoo.org> eselect-ruby-20090909.ebuild:
  Stable for HPPA (bug #288699).

  11 Sep 2009; Daniel Robbins <drobbins@funtoo.org>
  eselect-ruby-20090909.ebuild: merged in Funtoo changes to support
  /usr/bin/ruby1.9 (vs /usr/bin/ruby19 in Gentoo)

*eselect-ruby-20090909 (09 Sep 2009)

  09 Sep 2009; Alex Legler <a3li@gentoo.org> -eselect-ruby-20081211.ebuild,
  +eselect-ruby-20090909.ebuild:
  Version bump, fixing #284027 and #277858. Removing old version.

*eselect-ruby-20090723 (23 Jul 2009)

  23 Jul 2009; Daniel Robbins <drobbins@funtoo.org>
  +eselect-ruby-20090723.ebuild: adding support for new "ruby1.9", etc.
  suffixes (previously "xy", now moving to "x.y")

  15 May 2009; Alexis Ballier <aballier@gentoo.org>
  eselect-ruby-20081227.ebuild:
  keyword ~sparc-fbsd

  09 May 2009; Jeroen Roovers <jer@gentoo.org> eselect-ruby-20081227.ebuild:
  Stable for HPPA (bug #268515).

  08 May 2009; Alex Legler <a3li@gentoo.org> eselect-ruby-20081227.ebuild:
  amd64 stable, bug #268515.

  08 May 2009; Raúl Porcel <armin76@gentoo.org>
  eselect-ruby-20081227.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #268515

  07 May 2009; Christian Faulhammer <fauli@gentoo.org>
  eselect-ruby-20081227.ebuild:
  stable x86, security bug 268515

  07 May 2009; Brent Baude <ranger@gentoo.org> eselect-ruby-20081227.ebuild:
  Marking eselect-ruby-20081227 ppc64 and ppc for bug 268515

  07 May 2009; Tobias Klausmann <klausman@gentoo.org>
  eselect-ruby-20081227.ebuild:
  Stable on alpha, bug #268515
