@@ -1,0 +1,20 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-ruby/eselect-ruby-20100603.ebuild,v 1.1 2010/06/03 14:40:12 a3li Exp $
+
+DESCRIPTION="Manages multiple Ruby versions"
+HOMEPAGE="http://www.gentoo.org"
+SRC_URI="http://dev.a3li.li/gentoo/distfiles/ruby.eselect-${PVR}.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~sparc-fbsd ~x86-fbsd"
+IUSE=""
+
+RDEPEND=">=app-admin/eselect-1.0.2"
+
+src_install() {
+	insinto /usr/share/eselect/modules
+	sed -i -e 's/18,19,20/18,1.9,19,20,2.0/g' "${WORKDIR}/ruby.eselect-${PVR}"
+	newins "${WORKDIR}/ruby.eselect-${PVR}" ruby.eselect || die
+}
